# WeWork

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  api_spec.yaml  docker-compose.dev.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 202603110001_create_professionals.py
backend/app/: __init__.py  config.py  logging_config.py  main.py  seed.py
backend/app/api/: dependencies.py
backend/app/api/v1/: health.py  professionals.py
backend/app/application/: dto.py
backend/app/application/usecases/: professional_usecases.py
backend/app/domain/entities/: professional.py
backend/app/domain/models/: professional.py
backend/app/domain/repositories/: professional_repository.py
backend/app/infra/db/: models.py  session.py  sql_professional_repository.py
backend/app/infra/email/: sender.py
backend/app/infra/events/: queue.py
backend/app/infra/scheduler/: contracts.py
backend/app/infrastructure/db/: models.py
backend/app/infrastructure/repositories/: professional_sqlalchemy_repository.py
backend/app/interfaces/api/: dependencies.py
backend/app/interfaces/api/routers/: health.py
backend/app/repositories/: professional_repository.py
backend/app/schemas/: professional.py
backend/app/services/: professional_service.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_professional_usecases_unit.py  test_professionals_integration.py
backend/wework_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: PROMPTS_E_TRADEOFFS.md  prompts_and_tradeoffs.md
frontend/: .eslintrc.cjs  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Button.tsx  DataTable.tsx  ExportMenu.tsx  FilterBar.test.tsx  FilterBar.tsx  Input.tsx  Logo.test.tsx  Logo.tsx  Modal.tsx  ProfessionalFilters.tsx  ProfessionalForm.tsx  ProfessionalTable.tsx
frontend/src/hooks/: useProfessionals.ts
frontend/src/pages/: App.tsx  ProfessionalDetailPage.tsx  ProfessionalsList.tsx
frontend/src/services/: api.ts
frontend/src/types/: pdf-libs.d.ts  professional.ts
scripts/: bootstrap-dev.ps1  bootstrap-dev.sh
(+5 files in other folders)
